dataset1235/2025-2/805158916/users/2584427029/executions/1584167357_2403290319.log
== SUBMISSION (2025-08-27 14:35:24)
-- CODE: 
preco = float(input("Preco do produto"))
quantidade = int(input("Quantidade desejada"))
Preco_total = preco * quantidade

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produtoQuantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produtoQuantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produtoQuantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produtoQuantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produtoQuantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produtoQuantidade desejada91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:43:23)
-- CODE: 
preco = float(input("Preco do produto: "))
quantidade = int(input("Quantidade desejada"))
Preco_total = preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produto: Quantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produto: Quantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produto: Quantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produto: Quantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produto: Quantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produto: Quantidade desejada91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:30:06)
-- CODE: 
preco = float(input("Preco do produto"))
quantidade = int(input("Quantidade desejada"))
Preco_total= * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 3
    Preco_total= * quantidade
                 ^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 3
    Preco_total= * quantidade
                 ^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 3
    Preco_total= * quantidade
                 ^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 3
    Preco_total= * quantidade
                 ^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 3
    Preco_total= * quantidade
                 ^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 3
    Preco_total= * quantidade
                 ^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:43:21)
-- CODE: 
preco = float(input("Preco do produto: "))
quantidade = int(input("Quantidade desejada"))
Preco_total = preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produto: Quantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produto: Quantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produto: Quantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produto: Quantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produto: Quantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produto: Quantidade desejada91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:35:31)
-- CODE: 
preco = float(input("Preco do produto"))
quantidade = int(input("Quantidade desejada"))
Preco_total = preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produtoQuantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produtoQuantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produtoQuantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produtoQuantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produtoQuantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produtoQuantidade desejada91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:35:22)
-- CODE: 
preco = float(input("Preco do produto"))
quantidade = int(input("Quantidade desejada"))
Preco_total = preco * quantidade

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produtoQuantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produtoQuantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produtoQuantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produtoQuantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produtoQuantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produtoQuantidade desejada91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:43:12)
-- CODE: 
preco = float(input("Preco do produto: "))
quantidade = int(input("Quantidade desejada: "))
Preco_total = preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produto: Quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produto: Quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produto: Quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produto: Quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produto: Quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produto: Quantidade desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:32)
-- CODE: 
preco = float(input(Preco_do_produto))
quantidade = int(input(Quantidade_desejada))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float(input(Preco_do_produto))
                        ^^^^^^^^^^^^^^^^
NameError: name 'Preco_do_produto' is not defined
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float(input(Preco_do_produto))
                        ^^^^^^^^^^^^^^^^
NameError: name 'Preco_do_produto' is not defined
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float(input(Preco_do_produto))
                        ^^^^^^^^^^^^^^^^
NameError: name 'Preco_do_produto' is not defined
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float(input(Preco_do_produto))
                        ^^^^^^^^^^^^^^^^
NameError: name 'Preco_do_produto' is not defined
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float(input(Preco_do_produto))
                        ^^^^^^^^^^^^^^^^
NameError: name 'Preco_do_produto' is not defined
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float(input(Preco_do_produto))
                        ^^^^^^^^^^^^^^^^
NameError: name 'Preco_do_produto' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:06)
-- CODE: 
preco = float(input("Preco do produto"))
quantidade = int(input("Quantidade desejada"))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produtoQuantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produtoQuantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produtoQuantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produtoQuantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produtoQuantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produtoQuantidade desejada91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:53:11)
-- CODE: 
preco = float(input("Preco do produto: "))
quantidade = int(input("Quantidade desejada: "))
custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produto: Quantidade desejada: 2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produto: Quantidade desejada: 450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produto: Quantidade desejada: 662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produto: Quantidade desejada: 77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produto: Quantidade desejada: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produto: Quantidade desejada: 350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:31:17)
-- CODE: 
preco = float(input("Preco do produto"))
quantidade = int(input("Quantidade desejada"))
Preco_total= preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produtoQuantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produtoQuantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produtoQuantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produtoQuantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produtoQuantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produtoQuantidade desejada91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:43:14)
-- CODE: 
preco = float(input("Preco do produto: "))
quantidade = int(input("Quantidade desejada: "))
Preco_total = preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produto: Quantidade desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produto: Quantidade desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produto: Quantidade desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produto: Quantidade desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produto: Quantidade desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produto: Quantidade desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:42:59)
-- CODE: 
preco = float(input("Preco do produto "))
quantidade = int(input("Quantidade desejada"))
Preco_total = preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produto Quantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produto Quantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produto Quantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produto Quantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produto Quantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produto Quantidade desejada91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:42:58)
-- CODE: 
preco = float(input("Preco do produto "))
quantidade = int(input("Quantidade desejada"))
Preco_total = preco * quantidade
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do produto Quantidade desejada2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do produto Quantidade desejada55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do produto Quantidade desejada76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do produto Quantidade desejada40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do produto Quantidade desejada123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do produto Quantidade desejada91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
